[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
margin_left = 328.0
margin_top = 248.0
margin_right = 648.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 16.0
margin_top = 40.0
margin_right = 144.0
margin_bottom = 64.0
text = "Name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Connect"]
margin_left = 200.0
margin_top = 40.0
margin_right = 296.0
margin_bottom = 60.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPText" type="LineEdit" parent="Connect"]
margin_left = 16.0
margin_top = 88.0
margin_right = 144.0
margin_bottom = 112.0
text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5

[node name="Join" type="Button" parent="Connect"]
margin_left = 200.0
margin_top = 88.0
margin_right = 296.0
margin_bottom = 108.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 8.0
margin_top = 24.0
margin_right = 48.0
margin_bottom = 38.0
text = "Name:"

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 8.0
margin_top = 72.0
margin_right = 48.0
margin_bottom = 86.0
text = "IP:"

[node name="Players" type="Panel" parent="."]
visible = false
margin_left = 424.0
margin_top = 240.0
margin_right = 536.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Players"]
margin_left = 24.0
margin_top = 128.0
margin_right = 88.0
margin_bottom = 148.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Players"]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
